<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/title_bar_without_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t_inverter_name"
            style="@style/s_text_common"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_inverter_name2" />

        <TextView
            android:id="@+id/t_group_number"
            style="@style/s_text_common"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_inverter_group" />

        <TextView
            android:id="@+id/t_cluster_number"
            style="@style/s_text_common"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_inverter_col" />

        <TextView
            android:id="@+id/t_angle"
            style="@style/s_text_common"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_inverter_angle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <kankan.wheel.widget.WheelView
            android:id="@+id/w_inverter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/w_group_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/w_cluster_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <kankan.wheel.widget.WheelView
            android:id="@+id/w_angle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>